--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .vs/HorariosMundiais/v15/Server/sqlite3/storage.ide
 .vs/HorariosMundiais/v15/Server/sqlite3/storage.ide-shm
 .vs/HorariosMundiais/v15/Server/sqlite3/storage.ide-wal
+Reloginhos/**
